cartapideploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartapi
spec:
  selector:
    matchLabels:
      app: cartapi
  template:
    metadata:
      labels:
        app: cartapi
    spec:
      containers:
      - name: cartapi
        image: riyasn2021/cartapi:latest
        resources:
          limits: 
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: cartapi
  annotations: 
    konghq.com/plugins: twelve-per-min
spec:
  type: NodePort
  selector:
    app: cartapi
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 32500
