orderservicedeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
spec:
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
      - name: orderservice
        image: riyasn2021/orderservice:latest
        resources:
          limits: 
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  annotations: 
    konghq.com/plugins: twelve-per-min
spec:
  type: NodePort
  selector:
    app: orderservice
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31500
